# linear-algebra

./: CMakeLists.txt  README.md
include/linear-algebra/: Matrix.h  Orientation.h  Transformation.h  Vector.h
linear-algebra/: CMakeLists.txt  Matrix.hpp  Orientation.hpp  Test.cpp  Vector.hpp
src/: Test.cpp  test.cpp
